--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,8 @@ jobs:
     - name: build
       run: msbuild /restore src\XamlTreeDump.sln /p:platform=x86 /p:configuration=debug
 
+    - name: Setup VSTest.console.exe
+      uses: darenm/Setup-VSTest@v1
+
     - name: test
       run: vstest.console.exe /platform:x86 src\UnitTests\bin\x86\Debug\UnitTests.build.appxrecipe
