--- a/src/TreeDumpLibrary/TreeDumpLibrary.csproj
+++ b/src/TreeDumpLibrary/TreeDumpLibrary.csproj
@@ -121,6 +121,9 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="TreeDumpLibrary.nuspec" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '16.0' ">
     <VisualStudioVersion>16.0</VisualStudioVersion>
   </PropertyGroup>
