add doc comments

--- a/src/TreeDumpLibrary/TreeDumpLibrary.csproj
+++ b/src/TreeDumpLibrary/TreeDumpLibrary.csproj
@@ -47,6 +47,7 @@
     <DebugType>full</DebugType>
     <UseVSHostingProcess>false</UseVSHostingProcess>
     <ErrorReport>prompt</ErrorReport>
+    <DocumentationFile>bin\x86\Debug\TreeDumpLibrary.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <PlatformTarget>x86</PlatformTarget>
