--- a/src/UnitTests/UnitTests.csproj
+++ b/src/UnitTests/UnitTests.csproj
@@ -159,15 +159,15 @@
     <PackageReference Include="MSTest.TestFramework">
       <Version>2.0.0</Version>
     </PackageReference>
-    <PackageReference Include="XamlTreeDump">
+    <!--<PackageReference Include="XamlTreeDump">
       <Version>1.0.2</Version>
-    </PackageReference>
+    </PackageReference>-->
   </ItemGroup>
   <ItemGroup>
-    <!-- <ProjectReference Include="..\TreeDumpLibrary\TreeDumpLibrary.csproj">
+     <ProjectReference Include="..\TreeDumpLibrary\TreeDumpLibrary.csproj">
       <Project>{9ec66a21-8562-4ccf-b5b5-fee5ab6074c9}</Project>
       <Name>TreeDumpLibrary</Name>
-    </ProjectReference> -->
+    </ProjectReference> 
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
