--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
     - name: build any cpu
       run: msbuild /restore src\TreeDumpLibrary\TreeDumpLibrary.csproj /p:configuration=release
 
-    - name: Setup Nuget.exe
-      uses: warrenbuckley/Setup-Nuget@v1
+    - name: Setup NuGet.exe for use with actions
+      uses: NuGet/setup-nuget@v1.0.5
 
     - name: pack
       run: nuget pack src\TreeDumpLibrary\TreeDumpLibrary.nuspec
